test/tools/panc/typecheck/NullCapsuleInWiring.out
NullCapsuleInWiring.java:37:11: compiler.err.capsule.null.declare
1 error
